<resources>
    <string name="app_name">StarFocus</string>

    <!--TELA DE CADASTRO-->
    <string name="signupDescription">Para começar!</string>
    <string name="cadaastrese">Cadastre-se</string>
    <string name="email">Email</string>
    <string name="Nome">Nome Completo</string>
    <string name="Senha">Senha</string>
    <string name="Telefone">Telefone Celular</string>
    <string name="Data_de_nascimento">Data de Nascimento</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="FacaLogin"> <font color="#595959">Já tem uma conta?</font><font color="#299DA3"> Login</font></string>
    <string name="Login">Login</string>
    <string name="strings_app_name">strings/app_name</string>
    <string name="welcome_back">BEM-VINDO DE VOLTA</string>
    <string name="to_continue">para continuar!</string>
    <string name="senha">Senha</string>
    <string name="forget_password">Esqueceu sua senha?</string>
    <string name="remember">Lembrar-me</string>
    <string name="noAccount">Não tem uma conta?</string>
    <string name="password">Redefina sua senha!</string>
    <string name="Send">Enviar</string>
    <string name="goback">Voltar para</string>
    <string name="jornada">Durante sua jornada, você terá um amigo ao seu lado. </string>
    <string name="choosename">Como  deve se chamar seu amigo?</string>
    <string name="save">Salvar</string>
    <string name="sair">Sair</string>
    <string name="jaVai">Já vai?</string>
    <string name="gif_description">gif</string>
    <string name="insert">Digite aqui...</string>
    <string name="calendar">Calendário</string>
    <string name="adventure">Continuar Aventura</string>
    <string name="backward"><![CDATA[<]]></string>
    <string name="forward"><![CDATA[>]]></string>
    <string name="Tasks">Minhas Tarefas</string>
    <string name="ToDo">To Do list</string>
    <string name="AddTarefa">Adicione uma tarefa</string>
    <string name="progresso">Progresso</string>
    <string name="ProgressoWarning">Adicione tarefas para destravar o progresso!</string>
    <string name="menuHome">Home</string>
    <string name="menuCloset">Closet</string>
    <string name="menuMapa">Mapa</string>
    <string name="menuPerfil">Perfil</string>
    <string name="floatingbutton">floating</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hoje">Hoje</string>
    <string name="Choosedate">Escolha a data</string>
    <string name="newtask">Nova Tarefa</string>
    <string name="feedbackNovatask">Wow, uma nova tarefa, complete-a e ganhe recompensas!</string>
    <string name="sendProgress">Enviar Progresso</string>
    <string name="maxChar">0/50</string>

    <string name="adviceProfile">Trocar nome do seu monstrinho.</string>
    <string name="name">Name</string>

    <string name="JaVai">Já vai?</string>
    <string name="Poxa">Poxa, espero te ver na próxima aventura!</string>

    <string name="novonome">Escolha um novo nome</string>
    <string name="namechanging">Nome</string>
    <string name="atualizarbtn">Salvar</string>

    <string name="hiistoryone">Em um reino, não tão distante, vivia um monstro...</string>
    <string name="jumphistory"><u>Pular história</u></string>

    <string name="historytwo">Salve seu amigo imaginário das garras da babá rodopinho, frank deixa para amanhã e desorganizadinho</string>
    <string name="historytop">Rodeado pelos seus piores pesadelos, que o observavam dia e noite</string>

    <string name="vamosComecar">Vamos começar?</string>
    <string name="taskaddedin">A tarefa será adicionada em:</string>
    <string name="namemonster">Esse é o nome do seu monstrinho...</string>

    <string name="historyprogressOne">Oh não, a Babá Rodopinho está atrás de mim! </string>
    <string name="historyprogressTwo">Obrigada por ter me ajudado a vencer a Babá Rodopinho!</string>
    <string name="historyprogressThree">Frank, deixa para amanhã, quer me prender na sa torre do relógio e me impedir de fazer minhas tarefas!</string>
    <string name="historyprogressFour">Nada ficará para amanhã! Frank foi derrotado!</string>
    <string name="historyprogressFive">O procrastinador quer me levar para longe de minhas tarefas!</string>
    <string name="historyprogressSix">Bravo! Derrotado!</string>

    <string name="buttonselecionar">Selecionar</string>


</resources>