<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/grey_ligth"
    android:gravity="center">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:src="@drawable/bottomsheetline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/inputtarefa2"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@color/grey"
        android:hint="@string/newtask"
        android:layout_marginTop="20dp"
        android:textSize="22sp"
        android:textColorHint="@color/grey_dark"
        android:fontFamily="@font/poppins_medium"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonToday2"
        android:layout_width="99dp"
        android:layout_height="32dp"
        android:text="@string/hoje"
        app:layout_constraintStart_toStartOf="@id/inputtarefa2"
        app:layout_constraintTop_toBottomOf="@id/inputtarefa2"
        android:fontFamily="@font/poppins_medium"
        android:textAllCaps="false"
        android:textSize="15sp"
        style="@style/buttondays"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawableStart="@drawable/baseline_calendar_month_24_purple"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonchoose2"
        android:layout_width="165dp"
        android:layout_height="32dp"
        android:text="@string/Choosedate"
        android:fontFamily="@font/poppins_medium"
        style="@style/buttondays"
        app:layout_constraintStart_toEndOf="@id/buttonToday2"
        app:layout_constraintTop_toBottomOf="@id/inputtarefa2"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="1dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAlignment="textEnd"
        android:drawableStart="@drawable/baseline_calendar_month_24_purple"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSaveTask"
        android:layout_width="103dp"
        android:layout_height="32dp"
        android:text="@string/save"
        android:layout_gravity="center"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/buttonchoose2"
        app:layout_constraintTop_toBottomOf="@id/inputtarefa2"
        android:fontFamily="@font/poppins_medium"
        android:textAllCaps="false"
        android:textSize="15sp"
        style="@style/buttonsend"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="1dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="180dp"
        android:layout_height="260dp"
        android:src="@drawable/bottomsheetcharacter"
        app:layout_constraintStart_toStartOf="@id/inputtarefa2"
        app:layout_constraintTop_toBottomOf="@id/buttonToday2"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="230dp"
        android:layout_height="84dp"
        style="@style/buttonsend"
        app:layout_constraintStart_toStartOf="@id/buttonchoose2"
        app:layout_constraintTop_toBottomOf="@id/buttonToday2"
        android:layout_marginTop="70dp"
        android:layout_marginStart="30dp"
        android:textColor="@color/white"
        android:text="@string/feedbackNovatask"
        android:textAlignment="center"
        android:paddingTop="12dp"
        android:paddingStart="0dp"
        android:paddingEnd="1dp"
        android:fontFamily="@font/poppins_medium"
        />
</androidx.constraintlayout.widget.ConstraintLayout>