<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_login"
    android:orientation="vertical"
    tools:context=".ResetPassword">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/purplebackground"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:scaleType="fitXY"
        android:src="@drawable/vector1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImage1"
        android:layout_width="280dp"
        android:layout_height="100dp"
        android:layout_marginBottom="220dp"
        android:src="@drawable/starfocuslogobig"
        app:layout_constraintBottom_toBottomOf="@id/purplebackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/purplebackground" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/monster"
        android:layout_width="206dp"
        android:layout_height="219dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/vector_monster_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/password"
        android:textColor="@color/teal_dark"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tocontinue"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="Insira seu email e siga as instruções enviadas para sua caixa de entrada."
        android:textAlignment="center"
        android:textColor="@color/purple"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/idEmail"
        style="@style/inputstyle"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:drawableEnd="@drawable/vector_mail"
        android:fontFamily="@font/poppins"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tocontinue" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSend"
        style="@style/buttonsend"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_bold"
        android:paddingTop="6dp"
        android:text="@string/Send"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/off_white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEmail" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/noAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="47dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/goback"
        android:textColor="@color/dark_grey"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSend" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="87dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/Login"
        android:textColor="@color/mediumBlue"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSend" />

</androidx.constraintlayout.widget.ConstraintLayout>