<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    android:orientation="vertical"
    tools:context=".ChangeName">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/rectangle"
        style="@style/rectangledetails"
        android:layout_width="370dp"
        android:layout_height="85dp"
        android:paddingTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/backProfile"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:src="@drawable/baseline_arrow_back_24"
        android:background="@android:color/transparent"
        android:layout_marginStart="0dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="@id/rectangle"
        app:layout_constraintTop_toBottomOf="@id/adventure"

        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/adventure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/novonome"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/off_white"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@id/rectangle"
        app:layout_constraintEnd_toEndOf="@id/rectangle"
        app:layout_constraintStart_toStartOf="@id/rectangle"
        app:layout_constraintTop_toTopOf="@id/rectangle" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/mduarmeunome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adventure"
        android:layout_marginTop="100dp"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextNewName"
        style="@style/inputstyle"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginTop="290dp"
        android:fontFamily="@font/poppins"
        android:gravity="center_vertical"
        android:hint="@string/namechanging"
        android:paddingTop="4dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adventure" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUpdateName"
        style="@style/buttonsend"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_bold"
        android:paddingTop="6dp"
        android:text="@string/atualizarbtn"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/off_white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNewName" />

</androidx.constraintlayout.widget.ConstraintLayout>