<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    android:orientation="vertical"
    tools:context=".Calendar">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/rectangle"
        style="@style/rectangledetails"
        android:layout_width="370dp"
        android:layout_height="85dp"
        android:paddingTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/vector_back"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toTopOf="@id/rectangle"
        app:layout_constraintBottom_toBottomOf="@id/rectangle"
        app:layout_constraintStart_toStartOf="@id/rectangle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/calendar"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/off_white"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@id/rectangle"
        app:layout_constraintEnd_toEndOf="@id/rectangle"
        app:layout_constraintStart_toStartOf="@id/rectangle"
        app:layout_constraintTop_toTopOf="@id/rectangle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/container"
        style="@style/inputstyle"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginTop="55dp"
        android:fontFamily="@font/poppins"
        android:gravity="center_vertical"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="Outubro 2024"
        android:textAlignment="center"
        android:textColor="@color/dark_black"
        android:textSize="15sp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="@id/container"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintTop_toTopOf="@id/container" />

    <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/backward"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/backward"
    android:background="@null"
    android:layout_marginBottom="2.5dp"
    android:textColor="@color/dark_black"
    android:textSize="25sp"
    app:layout_constraintBottom_toBottomOf="@id/container"
    app:layout_constraintStart_toStartOf="@id/container" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/forward"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/forward"
        android:background="@null"
        android:layout_marginBottom="2.5dp"
        android:textColor="@color/dark_black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@id/container"
        app:layout_constraintEnd_toEndOf="@id/container" />




</androidx.constraintlayout.widget.ConstraintLayout>
